--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
@@ -576,11 +576,21 @@
                   <div id="external-events">
                     <div class="form-group">
                       <label>Seleccione Paralelo:</label>
-                      <select class="form-control" id="Paralelo">
+                 <select class="form-control" id="Paralelo">
                            {% for Paralelo in data.Paralelo %} 
                         <option value="{{ Paralelo.id_paralelo }}">{{ Paralelo.nombre_paralelo }}</option>                        
                            {%endfor%}  
                       </select>
+                 {# <select class="form-control" id="Paralelo">
+                          
+                        <option value="1">S3A</option>
+                            <option value="2">S5K</option>
+                            <option value="3">S8J</option>
+                            <option value="4">S3M</option>
+                            <option value="5">S8I</option>
+                            <option value="6">S1A</option>                       
+                          
+                      </select>#}
                     </div>
                       <div class="form-group">
                       <label>Seleccione Materia:</label>
