--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/sugerencia.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/sugerencia.html.twig
@@ -12,32 +12,21 @@
                  
 <!-- -->
 
-        <div class="contentedit2">
-
-        <section class="content">
-          <div >
-             
-            
+ 
            
-            <div class="col-md-12">
-           
-                                    
-                                       
-                  <div class="contentedit2">
-
+               
     
 
-     <section class="content-header">
-          <h3>
-            Configuración General  
-         
-          </h3>
-         
-        </section>
+     
          <!-- Main content -->
-        <section class="content">
-          <div>
+      
             <div class="col-md-3">
+                   <div class="box box-solid">
+                   <div class="panel-heading">                 
+		       <div class="box-header with-border">
+                            <h5 class="box-title">Configuración General </h5>
+                       </div>
+     <div class="modal-body"> 
                <div class="box box-solid">
                 <div class="box-body no-padding">
                  <ul class="nav nav-pills nav-stacked">
@@ -48,12 +37,18 @@
                   </ul>
                 </div><!-- /.box-body -->
               </div><!-- /. box -->
-            
+            </div></div></div></div>
+              
             </div><!-- /.col -->
             <div class="col-md-7">
            
                                     
-                                       
+                                       <div class="col-md-12">
+                   <div class="box box-solid">
+                   <div class="panel-heading">                 
+		       <div class="box-header with-border">
+                            <h5 class="box-title">Configuración General </h5>
+                       </div>
                                
 				                      <div class="box-header with-border">
                                       <h4 class="box-title">Sugerencia</h4>
@@ -64,24 +59,12 @@
                               <br />         
                       <button type="submit" class="btn btn-success">Enviar</button>
                     
-                
+                  </div>  </div>  </div>
                                    
             </div>
 
-            
-            </div>
-        </section><!-- /.content -->
-
-      </div>              
-                                      
-                                   
-            </div>
-        
-          </div>
-        </section><!-- /.content -->
-
-      </div>
-                   </div>
+       
+        </div>
             </form>
 
         </section><!-- /.content -->
