--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
@@ -5,13 +5,47 @@
           TableAdvanced.init();          
      });  
 </script>
+<script type="text/javascript">
+    
+         
+            
+            function mensaje(id){   
+                var split_ = id.split("_");
+                $("#Texto").html(split_[0]);
+                $("#de").html(split_[1]);
+                $("#Modal").click();
+            }
+    
+     
+</script>
   <script src="{{ asset('js/EnviarMensajes.js') }}"></script>
     <script src="{{ asset('js/ValidacionesNotificaciones.js') }}"></script>
 <script src="{{ asset('theme/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
    
 
   <section class="content">
+    <button type="button" id="Modal" class="btn btn-info btn-lg" style="display: none" data-toggle="modal" data-target="#myModal">Open Modal</button>
+    <!-- Modal content-->
+    <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Notificación Recibida</h4>    
+        <h4 class="modal-title">De: <span id="de"></span></h4> 
+      </div>
+      <div class="modal-body">
+           <h4 class="modal-title">Detalle del Mensaje</h4>   
+        <p id="Texto"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
 
+  </div>
+</div>
       <div class="page-content" style="height: 600px;">
           <div class="">
              
@@ -36,7 +70,7 @@
 					        <th> Asunto   </th>
 					        <th> Detalle </th>
 					        <th>Fecha de Envio</th>
-                                               {# <th>Ver Mensajes</th>#}
+                                               <th>Ver Mensajes</th>
 				        </tr>
 				        </thead>
 				        <tbody>
@@ -48,8 +82,7 @@
                                     <td>{{ Mensajes.asunto }}</td>
                                     <td>{{ Mensajes.mensaje }}</td>
                                     <td style="text-align: center">{{ Mensajes.fecha_registro }}</td>
-                                    {#<td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
-                                    <i class="fa fa-envelope-o"></i></a>#}
+                                    <td style="text-align: center">  <a id="{{Mensajes.mensaje}}_{{Mensajes.nombres}}" onclick="mensaje(id)" style="cursor: pointer"><i class="fa fa-envelope-o"></i></a></td>
                                     </td>
                                 </tr>
                           {%endfor%}
