--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -104,7 +104,7 @@ function iniciar_sesion () {
 
 
 function validaContrasenia(idCaja){
-  expr = /(?=^[A-Z].{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
+  expr = /(?=^[A-Z].{7,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
   
   band = true;
 
@@ -116,7 +116,7 @@ function validaContrasenia(idCaja){
   
     if (!expr.test(stringvalue))
     {
-       mensaje_cisc( "error", "Contraseña invalida.");
+       mensaje_cisc( "error", "La contraseña no cumple con los requisitos.");
         $("#"+idCaja).val('');
         band = false;
     }
@@ -139,8 +139,8 @@ function login(stringvalue){
           var htmlCabecera = 
           '<div class="cambioContrasenia">' +
           '<p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br /></p>' +
-          '<p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>' +
-          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes caracteristicas:<br /></p>' +
+          '<p>&nbsp;&nbsp;-  El primer carácter debe comenzar con mayúscula</p>' +
+          '<p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes características:<br /></p>' +
           '<ul><li>  Letras abecedario Mayúsculas (A-Z).</li>' +
           '<li>  Letras abecedario minúsculas (a-z).</li>' +
           '<li>  Números (0-9). </li>' +
