--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password_interno.html.twig
@@ -20,8 +20,8 @@
             <div class="cambioContrasenia">
               <p>Estimado Usuario, la clave ingresada debe considerar los siguientes requisitos.<br />
               </p>
-              <p>&nbsp;&nbsp;-  El primer carácter debe ser alfanumérico en mayúsculas</p>
-              <p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes caracteristicas:<br />
+              <p>&nbsp;&nbsp;-  El primer carácter debe comenzar con mayúscula</p>
+              <p>&nbsp;&nbsp;-  Longitud 8 caracteres que contengan las siguientes características:<br />
               </p>
               <ul>
                 <li>  Letras abecedario Mayúsculas (A-Z).</li>
@@ -67,13 +67,13 @@ $(document).ready(function ($) {
 
 
 function validaContrasenia(idCaja){
-  expr = /(?=^[A-Z].{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
+  expr = /(?=^[A-Z].{7,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/
   band = true;
   stringvalue = $("#"+idCaja).val();
   if(stringvalue != ""){
     if (!expr.test(stringvalue))
     {
-       mensaje_cisc( "error", "Contraseña invalida.");
+       mensaje_cisc( "error", "La contraseña no cumple con los requisitos.");
         $("#"+idCaja).val('');
         band = false;
     }
