--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -4,7 +4,7 @@
 
 <header class="main-header">
   <!-- Logo -->
-  <a href="{{path('admin_academico_home')}}" class="logo">
+  <a href="{#{path('admin_academico_home')}#}" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>ARES</b></span>
     <!-- logo for regular state and mobile devices -->
