--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horarios_examen.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horarios_examen.html.twig
@@ -96,7 +96,7 @@
                     <div class="contentedit2">
 
                                         <h3>
-                          Subir Solicitud  
+                          Generación de Horarios de Examen  
 
                         </h3>
                <div>
