--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/horarios_examen_docente.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/horarios_examen_docente.html.twig
@@ -78,7 +78,7 @@
                                             <tr>
                                                 <td style="text-align: center">{{ docentes.id_sg_usuario }}</td> 
                                                 <td style="text-align: center">{{ docentes.profesor }}</td>                               
-                                                <td style="text-align: center">Horario De clases</td>
+                                                <td style="text-align: center">Horario Examen</td>
                                                 <td style="text-align: center">  <a target="_blank" href="{{path('admin_pdfhorarios_examen', {'id':docentes.id_sg_usuario,'nombre':docentes.profesor})}}"  id="31" name="Mensaje_1">
                                     <i class="fa fa-download"></i>                                                           
                                     </a></td>       </tr>
